--- a/src/GameHook.WebAPI/wwwroot/index.html
+++ b/src/GameHook.WebAPI/wwwroot/index.html
@@ -58,6 +58,7 @@
                             <a class="dropdown-item" href="http://github.com/gamehook-io/gamehook" target="_blank">Github</a>
                             <a class="dropdown-item" href="http://github.com/gamehook-io/mappers" target="_blank">Mappers Repository</a>
                             <a class="dropdown-item" :href="apiDocumentationUrl" target="_blank">API Documentation</a>
+                            <a class="dropdown-item" href="https://github.com/gamehook-io/gamehook/blob/main/CREDITS.md" target="_blank">Credits</a>
                         </div>
                     </div>
                 </div>
