Updated Discord link.

--- a/src/GameHook.WebAPI/wwwroot/index.html
+++ b/src/GameHook.WebAPI/wwwroot/index.html
@@ -54,7 +54,7 @@
                     <div class="dropdown-menu" role="menu">
                         <div class="dropdown-content">
                             <a class="dropdown-item" href="https://gamehook.io/" target="_blank">Website</a>
-                            <a class="dropdown-item" href="https://gamehook.io/discord.html" target="_blank">Discord Channel</a>
+                            <a class="dropdown-item" href="https://gamehook.io/discord" target="_blank">Discord Channel</a>
                             <a class="dropdown-item" href="http://github.com/gamehook-io/gamehook" target="_blank">Github</a>
                             <a class="dropdown-item" href="http://github.com/gamehook-io/mappers" target="_blank">Mappers Repository</a>
                             <a class="dropdown-item" :href="apiDocumentationUrl" target="_blank">API Documentation</a>
