--- a/src/GameHook.WebAPI/wwwroot/index.html
+++ b/src/GameHook.WebAPI/wwwroot/index.html
@@ -116,13 +116,14 @@
                                     <th class="has-text-white pt-1" style="width: 35%">Property Name</th>
                                     <th class="has-text-white pt-1" style="width: 30%">Value (Bytes)</th>
                                     <th class="has-text-white pt-1" style="width: 25%">Value</th>
-                                    <th class="has-text-white pt-1" style="min-width: 123px;"></th>
+                                    <th class="has-text-white pt-1" style="min-width: 148px;"></th>
                                 </tr>
                                 <tr v-for="property in getPinnedProperties()">
                                     <td class="pt-1">{{ property.path }}</td>
                                     <td class="pt-1 displayPropertyBytes">{{ displayBytes(property.bytes) }}</td>
                                     <td class="pt-1">{{ displayPropertyValue(property) }}</td>
                                     <td class="pt-1 has-text-centered">
+                                        <note-btn :property="property"></note-btn>
                                         <freeze-property-btn :property="property"></freeze-property-btn>
                                         <pin-property-btn :property="property"></pin-property-btn>
                                         <edit-property-btn :property="property"></edit-property-btn>
@@ -140,13 +141,14 @@
                                     <th class="has-text-white pt-1" style="width: 35%">Property Name</th>
                                     <th class="has-text-white pt-1" style="width: 30%">Value (Bytes)</th>
                                     <th class="has-text-white pt-1" style="width: 25%">Value</th>
-                                    <th class="has-text-white pt-1" style="min-width: 123px;"></th>
+                                    <th class="has-text-white pt-1" style="min-width: 148px;"></th>
                                 </tr>
                                 <tr v-for="property in getFrozenProperties()">
                                     <td class="pt-1">{{ property.path }}</td>
                                     <td class="pt-1 displayPropertyBytes">{{ displayBytes(property.bytes) }}</td>
                                     <td class="pt-1">{{ displayPropertyValue(property) }}</td>
                                     <td class="pt-1 has-text-centered">
+                                        <note-btn :property="property"></note-btn>
                                         <freeze-property-btn :property="property"></freeze-property-btn>
                                         <pin-property-btn :property="property"></pin-property-btn>
                                         <edit-property-btn :property="property"></edit-property-btn>
@@ -192,6 +194,10 @@
                                 <tr v-if="editingProperty.type != 'reference'">
                                     <td>Value</td>
                                     <td>{{ editingProperty.value }}</td>
+                                </tr>
+                                <tr v-if="editingProperty.note">
+                                    <td>Note</td>
+                                    <td>{{ editingProperty.note }}</td>
                                 </tr>
                             </table>
 
@@ -280,15 +286,26 @@
             <path d="M5 4h4l3 3h7a2 2 0 0 1 2 2v8a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-11a2 2 0 0 1 2 -2" />
         </svg>
 
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-folder-x" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9e9e9e" fill="none" stroke-linecap="round" stroke-linejoin="round" id="folder-open">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 4h4l3 3h7a2 2 0 0 1 2 2v8a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-11a2 2 0 0 1 2 -2" fill="#9e9e9e" />
+        </svg>
+
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-check" width="16" height="16" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" id="check">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
             <path d="M5 12l5 5l10 -10"></path>
+        </svg>
+
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-help" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#e0e0e0" fill="none" stroke-linecap="round" stroke-linejoin="round" id="note">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <circle cx="12" cy="12" r="9" />
+            <line x1="12" y1="17" x2="12" y2="17.01" />
+            <path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
         </svg>
     </svg>
 
     <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@6.0.3/dist/browser/signalr.min.js" integrity="sha256-8qu19eSyi7D86TUqTH7/pKaxrxITuHJYjGsxnNJWtMw=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@3.2.31/dist/vue.global.js" integrity="sha256-T3nUjmQxnOjzHxjuh3cHG9MpgOURumsZOuLHDQTef9I=" crossorigin="anonymous"></script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/vue@3.2.31/dist/vue.global.prod.js" integrity="sha256-2ndwnHC+N2Yt4HwOAdoyAb6R6u9Ddt+R3TBGij6U35Q=" crossorigin="anonymous"></script>-->
     <script src="dist/gameHookMapperClient.js"></script>
 
     <script type="text/javascript">
@@ -301,6 +318,15 @@
         const errorHintComponent = {
             props: ['err'],
             template: `<template v-if="err"><slot></slot><div v-if="err">{{ err.detail }}</div><div v-else>An unknown application error has occurred.</div><div>Please refer to the server logs if you need more information.</div></template>`
+        }
+
+        const noteBtnComponent = {
+            props: ['property'],
+            template: ` <div class="cmd-button" v-if="property.note">
+                            <svg class="sprite"><use xlink:href="#note"></use></svg>
+                        </div>
+                        <div class="cmd-button" v-else>
+                        </div>`
         }
 
         const freezePropertyBtnComponent = {
@@ -374,7 +400,9 @@
             },
             template: `
                 <div v-show="depth != 0" class="treeitem-node" v-on:click="open = !open">
-                    <svg class="sprite"><use xlink:href="#folder"></use></svg>
+                    <svg class="sprite" v-if="open == false"><use xlink:href="#folder"></use></svg>
+                    <svg class="sprite" v-if="open == true"><use xlink:href="#folder-open"></use></svg>
+
                     <span class="has-text-weight-semibold pl-2"><slot></slot></span>
                 </div>
 
@@ -384,6 +412,7 @@
                             <span class="has-text-weight-normal">{{ key }}:</span> <span class="has-text-weight-light">{{ displayPropertyValue(obj[key]) }}</span>
 
                             <div class="commands">
+                                <note-btn :property="obj[key]"></note-btn>
                                 <freeze-property-btn :property="obj[key]" />
                                 <pin-property-btn :property="obj[key]" />
                                 <edit-property-btn :property="obj[key]" />
@@ -638,6 +667,7 @@
         })
 
         app.component('tree-view-item', treeViewItemComponent)
+        app.component('note-btn', noteBtnComponent)
         app.component('freeze-property-btn', freezePropertyBtnComponent)
         app.component('pin-property-btn', pinPropertyBtnComponent)
         app.component('edit-property-btn', editPropertyBtnComponent)
