WIP refactoring some mapper terms.

--- a/src/GameHook.WebAPI/wwwroot/index.html
+++ b/src/GameHook.WebAPI/wwwroot/index.html
@@ -172,11 +172,11 @@
                                     <td>{{ editingProperty.path }}</td>
                                 </tr>
                                 <tr>
-                                    <td>Starting Address</td>
-                                    <td>{{ decimalToHexdecimal(editingProperty.startingAddress) }}</td>
+                                    <td>Address</td>
+                                    <td>{{ decimalToHexdecimal(editingProperty.address) }}</td>
                                 </tr>
                                 <tr>
-                                    <td>Length</td>
+                                    <td>Size</td>
                                     <td>{{ editingProperty.length }}</td>
                                 </tr>
                                 <tr v-if="editingProperty.index">
